--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,92 @@
     "\n",
     "image.save(f'./output/rand-squares-{run_id}.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run ID : 1646586005.232834\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random Points\n",
+    "\n",
+    "run_id = datetime.timestamp(datetime.now())\n",
+    "print('Run ID : '+str(run_id))\n",
+    "image = Image.new('RGB', (500, 500))\n",
+    "width, height = image.size\n",
+    "padding = 50\n",
+    "\n",
+    "\n",
+    "def random_colour():\n",
+    "    return (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
+    "\n",
+    "\n",
+    "def interpolate(f_co, t_co, interval):\n",
+    "    r=1-interval\n",
+    "    return(\n",
+    "        int(s_colour[0]*r+e_colour[0]*interval),\n",
+    "        int(s_colour[1]*r+e_colour[1]*interval),\n",
+    "        int(s_colour[2]*r+e_colour[2]*interval),\n",
+    "    )\n",
+    "\n",
+    "def hilo(a, b, c):\n",
+    "    if c < b: b, c = c, b\n",
+    "    if b < a: a, b = b, a\n",
+    "    if c < b: b, c = c, b\n",
+    "    return a + c\n",
+    "\n",
+    "def complement(r, g, b):\n",
+    "    k = hilo(r, g, b)\n",
+    "    return tuple(k - u for u in (r, g, b))\n",
+    "\n",
+    "points = []\n",
+    "for i in range(0, 9):\n",
+    "    points.append((random.randint(padding, width-padding),\n",
+    "                  random.randint(padding, height-padding)))\n",
+    "\n",
+    "\n",
+    "min_x = min([p[0] for p in points])\n",
+    "max_x = max([p[0] for p in points])\n",
+    "min_y = min([p[1] for p in points])\n",
+    "max_y = max([p[1] for p in points])\n",
+    "\n",
+    "x_offset = (min_x - padding) - (width - padding - max_x)\n",
+    "y_offset = (min_y - padding) - (height - padding - max_y)\n",
+    "\n",
+    "for i, point in enumerate(points):\n",
+    "    points[i] = (point[0] - x_offset // 2, point[1] - y_offset // 2)\n",
+    "\n",
+    "\n",
+    "drawImage = ImageDraw.Draw(image)\n",
+    "s_colour = random_colour()\n",
+    "e_colour = random_colour()\n",
+    "# e_colour = complement(s_colour[0], s_colour[1],s_colour[2])\n",
+    "\n",
+    "for i, p in enumerate(points):\n",
+    "    if(i == len(points)-1):\n",
+    "        drawImage.line([p, points[0]], width=2+i, fill=interpolate(s_colour,e_colour,i/9))\n",
+    "    else:\n",
+    "        drawImage.line([p, points[i+1]], width=2+i, fill=interpolate(s_colour,e_colour,i/9))\n",
+    "\n",
+    "\n",
+    "\n",
+    "image.save(f'./output/points-{run_id}.png')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
